# MPC_Acado

./: .gitignore  README.md  crossing-10m.txt  get_data2.py  plot.py  plot_obs.py
src/acado_getting_started/: circle_lane_cd  circle_lane_cd.cpp  combined_single_circle  combined_single_circle.cpp  combined_single_circle_2  combined_single_circle_2.cpp  curved_lane_cd  getting_started  getting_started.cpp  getting_started_hard_cons  getting_started_hard_cons.cpp  getting_started_lane_change  getting_started_lane_change.cpp  getting_started_soft_cons  getting_started_soft_cons.cpp  lane_cons_10_obs_cons  lane_cons_10_obs_cons.cpp  lane_cons_10_obs_cost  lane_cons_10_obs_cost.cpp  multi_circle.cpp  multi_circle_curved.cpp
src/acado_msgs/: CMakeLists.txt  package.xml
src/acado_msgs/msg/: OdomArray.msg
src/acado_msgs/srv/: GetControls.srv  GetControlsMulti.srv  GetVelocityCmd.srv
src/acado_ros/: CMakeLists.txt  config.yaml  package.xml
src/acado_ros/model/codegen/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/acado_ros/src/: behaviour_mpc.cpp  behaviour_mpc_velcost.cpp  circle_lane_srv.cpp  combined_behaviour.cpp  combined_behaviour_opp.cpp  combined_emergent.cpp  combined_mpc.cpp  combined_mpc_cons.cpp  combined_mpc_multi.cpp  combined_mpc_multi2.cpp  combined_mpc_multi3.cpp  combined_mpc_multi_thread.cpp  combined_ngsim.cpp  curved_lane.cpp  goal_reach_carla.cpp  goal_reach_idm.cpp  goal_reach_intersection.cpp  goal_reach_srv_hard.cpp  goal_reach_srv_soft.cpp  goal_reach_test.cpp  intersection_wide_lane.cpp  multi_circle_acado.cpp  multi_circle_curve.cpp  simple_mpc.cpp  var_speed_change.cpp
src/python_plot_pkg/: package.xml  setup.cfg  setup.py
src/python_plot_pkg/python_plot_pkg/: plot_carla.py  plot_circle_path.py  plot_curved_path.py  plot_idm.py  plot_inter_wide_lane.py  plot_intersection.py  plot_lane_merge.py  plot_multi_circle.py  plot_multi_circle_curved.py  plot_path.py  plot_path_cli.py  plot_var_speed.py
src/simulation_env/: config.yaml  package.xml  setup.cfg  setup.py
src/simulation_env/simulation_env/: behaviour_multi_goal.py  behaviour_multi_goal_var_vel.py  behaviour_old.py  behaviour_planning_follow.py  behaviour_planning_multi.py  behaviour_planning_tests.py  behaviour_planning_tests2.py  behaviour_planning_velcost.py  behaviour_selection.py  ceold.py  circle_env.py  combined_sim.py  combined_sim_async.py  combined_sim_new.py  emergent_test.py  ngsim_env.py  ngsim_test.py  optimize.py
txt/: ang_speed.txt  cruise_speed.txt  min_costs.txt  min_goals.txt  obs_res.txt
